--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -40,14 +40,10 @@
                 <div class="row justify-content-center">    
                     <div class="row">
                         <div class="col-lg-12">
-                            <label for="people">People: </label>
-                            <ng-multiselect-dropdown-angular7
-                                [data]="peopleList"
-                                [settings]="dropdownSettings"
-                                (onSelect)="onPersonSelect($event)"
-                                (onSelectAll)="onSelectAll($event)"
-                            >
-                            </ng-multiselect-dropdown-angular7>
+                            <label>Number of People:</label>
+                            <select>
+                                <option *ngFor="let number of numberList" [ngValue]="number">{{number}}</option>
+                            </select>
                         </div>
                         <div class="col-sm-12">
                             <label for="start">Date:</label>
