--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -39,8 +39,7 @@
                         <div class="col-lg-12">
                             <label for="people">People: </label>
                             <select>
-                                <option>
-                                </option>
+                                <option *ngFor="let person of peopleList" [ngValue]="person">{{person}}</option>
                             </select>
                         </div>
                         <div class="col-sm-12">
