--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -24,41 +24,51 @@
 
 <body>
 
-        <!-- Page Content Holder -->
-        <div id="content">
-
-            <!--Adjust the min and max value to the min being today and the max up to one-year ahead -->
-            <!---Pull from JSON for Participant names-->
-
-            <div class="container">
-                <div class="row justify-content-center">
-                    Start Connecting (Randomly Generate Friends)
-                </div>
-                <div class="row justify-content-center">    
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <label>Number of People:</label>
-                            <select>
-                                <option *ngFor="let number of numberList" [ngValue]="number">{{number}}</option>
-                            </select>
-                        </div>
-                        <div class="col-sm-12">
-                            <label for="start">Date:</label>
-                                <input type="date" id="start" name="trip-start"  
-                                    value="2018-07-22"
-                                    min="2018-01-01" max="2020-12-31">
-                        </div>
-                        <div class="col-sm-12">
-                            <div class="md-form md-outline">
-                                <label for="default-picker">Time:</label>
-                                <input type="time" id="default-picker" class="form-control" placeholder="Select time">
-                              </div>
-                        </div>
-                    </div>
-                </div>
+    <!-- Page Content Holder -->
+    <div id="content">
+        <!--Adjust the min and max value to the min being today and the max up to one-year ahead -->
+        <!---Pull from JSON for Participant names-->
+        <div class="container">
+            <div class="row justify-content-center">
+                Start Connecting (Randomly Generate Friends)
             </div>
-        </div>
-
+            <alert></alert>
+            <form [formGroup]="createMeeting" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label>Number of People:</label>
+                    <select>
+                        <option *ngFor="let number of numberList" [ngValue]="number">{{number}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="start">Date:</label>
+                        <input type="date" id="start" name="trip-start"  
+                            value="dateToday"
+                            min="yyyy-mm-dd" max="2100-12-31" 
+                            formControlName="date" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.date.errors }">
+                            <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
+                                <div *ngIf="f.date.errors.required">Date is required</div>
+                            </div>
+                </div>
+                <div class="form-group">
+                    <div class="md-form md-outline">
+                        <label for="default-picker">Time:</label>
+                        <input type="time" id="default-picker" placeholder="Select time" formControlName="time" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.time.errors }">
+                        <div *ngIf="submitted && f.time.errors" class="invalid-feedback">
+                            <div *ngIf="f.time.errors.required">Time is required</div>
+                        </div>
+                      </div>
+                </div>
+                <div class="form-group">
+                    <button [disabled]="loading" class="btn btn-primary">
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                        <a routerLink="/coffee-chat-profiles" class="btn btn-link"></a>
+                        Create Meeting
+                    </button>
+                </div>
+            </form>
+        </div>    
+    </div>
         
         
 
