--- a/src/app/journal-prompt/journal-prompt.component.css
+++ b/src/app/journal-prompt/journal-prompt.component.css
@@ -14,7 +14,9 @@ p {
     color: #999;
 }
 
-
+h4{
+    text-align: center;
+}
 
 /* ---------------------------------------------------
     SIDEBAR STYLE
