--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.css
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.css
@@ -24,6 +24,9 @@ p {
     box-shadow: 5px 10px #888888;
 }
 
+.journal-padding{
+    margin-bottom: 12px;
+}
 
 
 /* ---------------------------------------------------
