--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -45,11 +45,12 @@
         </div>
     </div>
     </form>
-    <div class = "" *ngFor="let user of validJournal" >
     <div id="content">
+    <div class = "" *ngFor="let user of validJournal" >
+    
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-6 offset-md-3 journal-padding">
                 <h2>Prompt: {{user.title}}</h2>
                 
                 <p>Entry: {{user.text}}</p>
