--- a/src/app/user-profile-navbar/user-profile-navbar.component.html
+++ b/src/app/user-profile-navbar/user-profile-navbar.component.html
@@ -9,7 +9,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="user-profile-profile">Profile</a>
+                                <a class="nav-link" href="user-profile">Profile</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="user-profile-dashboard">Dashboard</a>
