--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="row justify-content-center mt-3">
                                     <button class="accept-button mr-1" (click)="acceptMeeting(meeting)">Accept</button>
-                                    <button class="decline-button ml-1" >Decline</button>
+                                    <button class="decline-button ml-1" (click)="declineMeeting(meeting)">Decline</button>
                                 </div>
                             </div>
                             </div>
