--- a/src/app/journal-free-edit/journal-free-edit.component.css
+++ b/src/app/journal-free-edit/journal-free-edit.component.css
@@ -1,19 +1,3 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-}
-
-p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
-
 h4{
     text-align: center;
 }
@@ -76,8 +60,8 @@ textarea:hover {
     border: 2px solid #7CA5AF;
     background-color: whitesmoke;
     color: #7CA5AF;
-    height: 75%;
-    width: 90%;
+    height: 40px !important;
+    width: 80px !important;
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
