--- a/src/app/journal-free-edit/journal-free-edit.component.html
+++ b/src/app/journal-free-edit/journal-free-edit.component.html
@@ -38,7 +38,7 @@
                         <textarea rows="1" class="title text-center" formControlName="title" style="margin-top: 50px;" placeholder="Title"></textarea>
                     </div>
 
-                        <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; padding: 2%;">{{currentDate}}</div>
+                        <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; margin: 0 !important;">{{currentDate}}</div>
                         <div class="form-group" style="align-content: center;">
                             <textarea rows="20" formControlName="textEntry" class="notes"></textarea>
                         </div>
