--- a/src/app/journal-prompt/journal-prompt.component.html
+++ b/src/app/journal-prompt/journal-prompt.component.html
@@ -37,30 +37,15 @@
                         <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; text-align: center; padding: 2%">{{currentDate}}</div>
                         <div class="form-group" style="align-content: center;">
                             <textarea rows="20" class="notes" formControlName="textEntry" placeholder="Begin entry here..."></textarea>
-
-                            <button type="button" (click)="onSubmit()" [disabled]="loading" class="btn btn-primary" routerLink="/journal">
-                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                                Publish
-                            </button>
                         </div>
                     </div>
                     <div class="col-2"></div>
                 </div>
-                <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-2">
+                    <div class="row justify-content-center">
                         <button [disabled]="loading" class="buttons">
                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                            Save
+                            Submit
                         </button>
-                    </div>  
-                    <div class="col-2">
-                        <button [disabled]="loading" class="buttons">
-                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                            Publish
-                        </button>
-                    </div>  
-                    <div class="col-4"></div>
                 </div>
             </div>  
         </form>
