--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -31,7 +31,7 @@
                     <div class="login-form">
                     <div class="col-md-12">
                         <img src="assets/images/logo.jpg" alt="" width="100" height="80"><br>
-                    <h2 class="bold">{{currentUser.firstName}}'s Profile</h2>
+                    <h2 class="bold type-font" style="color: black;">{{currentUser.firstName}}'s Profile</h2>
                     <hr class="new-divide">
                     <p class="bold">Username: <a style="font-weight: 400;">{{currentUser.username}}</a></p>
                     <div class="line"></div>
