--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -51,7 +51,7 @@
                                     <a class="p-1 reg-font"> {{participant.status}}</a>
                                 </div>
                                 <div class="row justify-content-center">
-                                    <button class="button" routerLink="/coffee-chat-profiles">View Participant Profiles</button>
+                                    <button class="button" (click)="sendMeeting(meeting)" routerLink="/coffee-chat-profiles">View Participant Profiles</button>
                                 </div>
 
                   
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 </div>
-
+                
                 <!--Meetings Schedules With ME-->
                 <div class="col-6">
                         <h2 class="type-font text-center mt-3" style="color: white;">Meetings Scheduled with Me</h2>
