--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.css
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.css
@@ -43,7 +43,7 @@ h4{
    flex-direction: column;
    flex-shrink: 3;
    align-items: center !important;
-   justify-content: end;
+   justify-content: flex-end;
    width: 30%;
    min-height: 800px;
    border-right: 1px solid grey;
@@ -156,4 +156,99 @@ h4{
 	right: 0;
 	top: 0;
 	display: none;
+}
+
+/*-------------------------------------
+Modal CSS
+--------------------------------------*/
+
+.modal,
+.modal-box {
+  z-index: 3000;
+}
+
+.modal-sandbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: transparent;
+}
+
+.modal {
+  display: none; 
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgb(0,0,0);
+  background: rgba(0,0,0,.8);
+  overflow: auto;
+}
+
+.modal-box {
+  position: relative;
+  width: 80%;
+  max-width: 920px;
+  margin: 100px auto;
+  animation-name: modalbox;
+  animation-duration: .4s;
+  animation-timing-function: cubic-bezier(0,0,.3,1.6);
+}
+
+.modal-header {
+  padding: 20px 40px;
+  background: #7CA5AF;
+  color: #ffffff;
+}
+
+.modal-body {
+  background: whitesmoke;
+  padding: 60px 40px;
+}
+
+/* Close Button */
+.close-modal {
+  text-align: right;
+  cursor: pointer;
+}
+
+/* Animation */
+@-webkit-keyframes modalbox {
+  0% {
+    top: -250px; 
+    opacity: 0;
+  }
+  100% {
+    top: 0; 
+    opacity: 1;
+  }
+}
+
+@keyframes modalbox {
+  0% {
+    top: -250px; 
+    opacity: 0;
+  }
+  100% {
+    top: 0; 
+    opacity: 1;
+  }
+}
+
+.modal-button{
+    border: 2px solid #7CA5AF;
+    background-color: whitesmoke;
+    color: #7CA5AF;
+    padding: 10px 24px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.modal-button:hover{
+    background-color:#7CA5AF;
+    color: white; 
 }
