--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -26,52 +26,26 @@
     <div class="user" id="content">
         <div class="coffee-container">
             <h4 class="text-center">Upcoming Coffee Chats</h4>
-            <div class="card">
+            <div class="card" *ngFor="let meeting of selectedMeetings"  [ngValue]="meeting">
                 <div class="card-title justify-content-end reg-font mb-0 mt-3 ml-3 mr-3">
-                    <a style=" font-size: 14px; font-weight: 500;">Sat, May 14</a>
-                    <a style=" font-size: 14px;">10:00 AM</a>
+                    <a style=" font-size: 14px; font-weight: 500;">{{meeting.month}}/{{meeting.day}}/{{meeting.year}}</a>
+                    <a style=" font-size: 14px;">{{meeting.time}}</a>
                 </div>
                 <div class="card-body mt-0">
                     <hr class="divide mt-0 mb-2" />
                     <div class="card-text ml-3 mr-3">
                         <div class="row justify-content-end">
                             <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 500;"> Host:</a>
-                            <a class="p-1 reg-font"> Shannon</a>
+                            <a class="p-1 reg-font"> {{meeting.host}}</a>
                         </div>
                         <div class="row justify-content-end">
-                            <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 500;">5 Attendees:</a>
-                            <a class="link" routerLink="/coffee-chat-profiles">View Profiles</a>
-                        </div>
-                        <div class="row justify-content-center mt-3">
-                            <button class="button mr-1">Details</button>
+                            <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 500;">{{meeting.participants.length}} Attendees:</a>
+                            <a class="link" routerLink="/coffee-chat-profiles" (click)="sendMeeting(meeting)">View Profiles</a>
                         </div>
                     </div>
                     </div>
                 </div> 
-                
-                <div class="card">
-                    <div class="card-title justify-content-end reg-font mb-0 mt-3 ml-3 mr-3">
-                        <a style=" font-size: 14px; font-weight: 500;">Sat, May 14</a>
-                        <a style=" font-size: 14px;">10:00 AM</a>
-                    </div>
-                    <div class="card-body mt-0">
-                        <hr class="divide mt-0 mb-2" />
-                        <div class="card-text ml-3 mr-3">
-                            <div class="row justify-content-end">
-                                <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 500;"> Host:</a>
-                                <a class="p-1 reg-font"> Shannon</a>
-                            </div>
-                            <div class="row justify-content-end">
-                                <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 500;">5 Attendees:</a>
-                                <a class="link" routerLink="/coffee-chat-profiles">View Profiles</a>
-                            </div>
-                            <div class="row justify-content-center mt-3">
-                                <button class="button mr-1">Details</button>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                    <a class="link mt-3" routerLink="/coffee-chat-upcoming-meetings">View All Upcoming Meetings</a>
+                <a class="link mt-3" routerLink="/coffee-chat-upcoming-meetings">View All Upcoming Meetings</a>
             </div> 
         <div class="mood-container">
                 <h4 class="text-center">Mood Tracker Data</h4>
@@ -85,20 +59,36 @@
                         <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Date:</p>
                         <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Title:</p>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between" *ngFor="let entry of entries; index as i" [ngValue]="entry">
+                    <li class="list-group-item d-flex justify-content-between" *ngFor="let entry of entries" [ngValue]="entry">
                         <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.month}}/{{entry.day}}/{{entry.year}}</p>
-                        <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.title}} {{i}} </p>
+                        <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.title}}</p>
                         <div class="icons">
-                            <button class="btn-2" title="Edit" (click)="getValue(entry)"><span class="fa fa-pencil fa-sm" style="color: grey"></span></button>
                             <button class="btn-2" title="View" (click)="getEntry(entry)" data-toggle="modal" data-target="#entry"><span class="fa fa-eye fa-sm"  style="color: grey"></span></button>
-                            <button class="btn-2" title="Delete" (click)="getEntry(entry)" data-toggle="modal" data-target="#delete"><span class="fa fa-trash-o"  style="color: grey"></span></button>
                         </div>
                     </li>
                   </ul> 
             </div>
             <a class="link mt-3 text-center" routerLink="/journal-published">View All Previous Entries</a>
         </div>
-                 
+                
+        
+        <!-- Modal -->
+        <div class="modal" id="entry">
+
+            <div class="modal-sandbox"></div>
+            <div class="modal-box">
+                <div class="modal-header">
+                    <h1 class="reg-font">{{currentEntry.title}}</h1>
+                <div class="close-modal justify-content-end" style="margin-top: 1em" data-dismiss="modal" aria-label="Close">&#10006;</div> 
+                
+                </div>
+                <div class="modal-body">
+                    <p> {{currentEntry.text}} </p>
+                <br />
+                <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
             
 
