--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -26,7 +26,7 @@ h2{
   .login-form {
     position: relative;
     z-index: 1;
-    background: whitesmoke;
+    background: rgba(245, 245, 245, 0.774);
     max-width: 500px;
     margin: 0 auto 100px;
     padding: 25px;
