--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.css
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.css
@@ -43,7 +43,7 @@ h4{
    flex-direction: column;
    flex-shrink: 3;
    align-items: center !important;
-   justify-content: flex-end;
+   justify-content: flex-start;
    width: 30%;
    min-height: 800px;
    border-right: 1px solid grey;
@@ -78,7 +78,7 @@ h4{
 .card{
     margin: 5px;
     width: 300px;
-    height: 200px;
+    height: 150px;
     border-radius: 0;
     box-shadow: 1px 1px 5px grey;
 }
