--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -16,8 +16,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
 </head>
-<div>
-    <app-navbar style="z-index: 9999;"></app-navbar>
+<div class="sticky-top">
+    <app-navbar></app-navbar>
 </div>
 <body>
     <div class="user" id="content">
@@ -57,7 +57,7 @@
                         <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Title:</p>
                     </li>
                     <li class="list-group-item d-flex justify-content-between" *ngFor="let entry of entries" [ngValue]="entry">
-                        <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.month}}/{{entry.day}}/{{entry.year}}</p>
+                        <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.month}}/{{entry.day}}</p>
                         <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.title}}</p>
                         <div class="icons">
                             <button class="btn-2" title="View" (click)="getEntry(entry)" data-toggle="modal" data-target="#entry"><span class="fa fa-eye fa-sm"  style="color: grey"></span></button>
